src/styles/styles.css
.login-google-btn {
width: 100%;
height: 50px;
display: flex;
color: grey;
padding: 0 20px;
font-size: 16px;
cursor: pointer
}

.login-google-btn span {
    margin-left: 60px;
}

.login-google-btn svg {
    margin-left: 40px;
}

.set_goal {
  max-width: 450px;
  text-align: center;
}

/* COLORLIB V3 ERROR CSS */
#notfound {
    position: relative;
    height: 100vh;
  }

  #notfound .notfound {
    position: absolute;
    left: 50%;
    top: 40%;
    -webkit-transform: translate(-50%, -50%);
        -ms-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
  }

  .notfound {
    max-width: 800px;
    width: 100%;
    line-height: 1.4;
    text-align: center;
  }

  .notfound .notfound-400 {
    position: relative;
    height: 240px;
  }

  .notfound .notfound-400 h1 {
    font-family: 'Montserrat', sans-serif;
    position: absolute;
    left: 50%;
    top: 50%;
    -webkit-transform: translate(-50%, -50%);
        -ms-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
    font-size: 252px;
    font-weight: 900;
    margin: 0px;
    color: #262626;
    text-transform: uppercase;
    letter-spacing: -40px;
    margin-left: -20px;
    margin-top: 20px;
  }

  .notfound .notfound-400 h1>span {
    text-shadow: -8px 0px 0px #fff;
  }

  .notfound .notfound-400 h3 {
    font-family: 'Cabin', sans-serif;
    position: relative;
    font-size: 16px;
    font-weight: 700;
    text-transform: uppercase;
    color: #262626;
    margin: 0px;
    letter-spacing: 3px;
    padding-left: 6px;
  }

  .notfound h2 {
    font-family: 'Cabin', sans-serif;
    font-size: 20px;
    font-weight: 400;
    text-transform: uppercase;
    color: #000;
    margin-top: 0px;
    margin-bottom: 25px;
  }

  @media only screen and (max-width: 767px) {
    .notfound .notfound-400 {
      height: 200px;
    }
    .notfound .notfound-400 h1 {
      font-size: 200px;
    }
  }

  @media only screen and (max-width: 480px) {
    .notfound .notfound-400 {
      height: 162px;
    }
    .notfound .notfound-400 h1 {
      font-size: 162px;
      height: 150px;
      line-height: 162px;
    }
    .notfound h2 {
      font-size: 16px;
    }
  }



/* CSS animation */

/* pastel colours  #CCFF99, #FF9999, #CC99FF, #66FFFF */
/* complimentary colours #08b500, #ad00b5, #b50008, #08b500 */
/* complimentary somewhat unsaturated #8d8825, #cb343c, #89258e, #c334cb, #8d252b, #c9c236 */

body {
  width: 100wh;
  height: 90vh;
  color: #fff;
  background: linear-gradient(45deg, #74713e, #a6595d, #713e74, #a259a6, #743e41, #a6a259 );
  background-size: 400% 400%;
  -webkit-animation: Gradient 155s ease infinite;
  -moz-animation: Gradient 155s ease infinite;
  animation: Gradient 155s ease infinite;
}

@-webkit-keyframes Gradient {
  0% {
    background-position: 0% 0%
  }
  14% {
    background-position: 0% 100%
  }
  28% {
    background-position: 100% 0%
  }
  33% {
    background-position: 100% 100%
  }
  42% {
    background-position: 0% 0%
  }
  59% {
    background-position: 100% 0%
  }
  71% {
    background-position: 0% 100%
  }
  86% {
    background-position: 100% 100%
  }
  100% {
    background-position: 0% 0%
  }
}

@-moz-keyframes Gradient {
  0% {
    background-position: 0% 0%
  }
  14% {
    background-position: 0% 100%
  }
  28% {
    background-position: 100% 0%
  }
  33% {
    background-position: 100% 100%
  }
  42% {
    background-position: 0% 0%
  }
  59% {
    background-position: 100% 0%
  }
  71% {
    background-position: 0% 100%
  }
  86% {
    background-position: 100% 100%
  }
  100% {
    background-position: 0% 0%
  }
}

@keyframes Gradient {
  0% {
    background-position: 0% 0%
  }
  14% {
    background-position: 0% 100%
  }
  28% {
    background-position: 100% 0%
  }
  33% {
    background-position: 100% 100%
  }
  42% {
    background-position: 0% 0%
  }
  59% {
    background-position: 100% 0%
  }
  71% {
    background-position: 0% 100%
  }
  86% {
    background-position: 100% 100%
  }
  100% {
    background-position: 0% 0%
  }
}

input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    margin: 0; 
}

.ui.header.white {
  color: white;
}

